# Denzven-Graphing-Api-Bot

./: .breakpoints  API_Formula_Examples.py  CustomCSS.css  Privacy-Policy.html  README.md  config.py  index.md  inputstatus.py  keep_alive.py  main.py  prefixes.json  pyproject.toml  requirements.txt  style.css  topgg_css.css
commands/: btns.py  commands.py  help.py  help_test.py  prefix.py  statscord.py  test.py  topgg.py  vote_msg.py
events/: on_command.py  on_error.py  on_guild_join.py
list/: cog_list.py  statuslist.py
main_api/: 3dgr.py  3dgrem.py  Examples.py  derivate.py  derivative_embed.py  derivatives.py  examples.py  fetchgraph.py  fgr.py  fgrem.py  kill.py  latex.py  main_graph.py  pgr.py  pgrem.py
task/: status_task.py
utils/: custom_checks.py
