[tool.poetry]
name = "repl_python3_DenzGraphingApiWrapperpy-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.1"
Denzven-Graphing-Api-Wrapper = "^0.0.0"
prettytable = "^2.1.0"
jishaku = "^2.1.0"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
