[tool.poetry]
name = "denzven-graphing-api-bot-py"
version = "0.1.0"
description = ""
authors = ["DenzvenIgnatius <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
jishaku = "^2.1.0"
"guilded.py" = { git = "https://github.com/shayypy/guilded.py", branch = "master" }
aiohttp = "^3.7.4"
Flask = "^2.0.1"
"statcord.py" = "^3.1.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
